Change log for Products.LDAPUserFolder
======================================

2.28 (unreleased)
-----------------

- do not unicode encode binary attributes [fRiSi]


2.27 (2014-04-23)
-----------------
- fix mismatch between method name and security declaration
  (https://bugs.launchpad.net/bugs/1221624)
- ensure bind passwords used for the LDAP delegate and the user
  folder do not get out of sync


2.26 (2013-06-04)
-----------------
- Fix python-ldap error when receiving sets instead of lists for
  attributes to search on (Patch by Godefroid Chapelle)
- Some cleanups found by pyflakes ((Patch by Godefroid Chapelle)


2.25 (2013-06-03)
-----------------
- Refactor some definitions in the utils module to make them easier
  to override (Patch by Godefroid Chapelle)
- Fixed a missing string conversion in getGroupedUsers (Patch by
  Godefroid Chapelle)


2.24 (2012-10-18)
-----------------
- When comparing a login value to login values found on the LDAP
  server strip the login value first. This follows OpenLDAP behavior
  which considers values as matches even with trailing or leading
  spaces in the value query filter.
  (https://bugs.launchpad.net/bugs/1060080)
- LDAPDelegate: When using a user from the Zope security machinery
  for the purpose of finding a suitable bind DN and password for
  connecting to a LDAP server, discard it when it's not been created
  as the result of a real login and thus has an invalid password
  (https://bugs.launchpad.net/bugs/1060112)
- use a known set of component versions (versions.txt from Zope
  2.3.18) to avoid having to micromanage dependency versions
- moved change log entries for version 2.18 and older from CHANGES.txt
  to HISTORY.txt
- reformat HISTORY.txt and make it ReST-compliant
- clean up formatting of CHANGES.txt


2.23 (2012-04-23)
-----------------
- Add ``setuptools-git`` to ``setup_requires`` to prevent missing
  files in the egg release - versions 2.22 and 2.21 will not build
  due to a missing ``VERSION.txt``.