@@ -6,6 +6,8 @@ Change log for Products.LDAPUserFolder
 
 - do not unicode encode binary attributes [fRiSi]
 
+- also use utils._verifyUnicode for group attributes [fRiSi]
+
 
 2.27 (2014-04-23)
 -----------------
